
2020-03-23  Ross Burton <ross.burton@intel.com>

	configure.ac: remove duplicate AC_CONFIG_MACRO_DIR

	Autoconf 2.70 will fatally error out if AC_CONFIG_MACRO_DIR is called
	more than once:

	| configure.ac:25: error: AC_CONFIG_MACRO_DIR can only be used once

	* configure.ac:
	  - Remove duplicate AC_CONFIG_MACRO_DIR
2020-02-14  Chun-wei Fan  <fanc999@yahoo.com.tw>

	Don't use __attribute__((destructor)) on MSVC builds

	* src/libthai.c:
	* src/thbrk/brk-common.c:
	  - Instead define a DLLMain that does the same thing when libthai
	    is built as a DLL, on DLL_PROCESS_DETACH.  Ensure that tests
	    builds as well since src/thbrk/brk-common.c is also used.

2020-01-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-slang.txt:
	* data/tdict-spell.txt:
	  - Add words.

	* data/tdict-proper.txt, data/tdict-city.txt:
	  - Move "ลิเวอร์พูล" from proper to city.
	* data/tdict-proper.txt, data/tdict-history.txt:
	  - Move "เมจิ" from proper to history.

	* data/tdict-common.txt:
	  - Correct some sorting order.

2019-12-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use GitHub issue tracker as bug report address.

	* configure.ac:
	  - Replace bug report e-mail address with GitHub issue tracker URL.

2018-12-17  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Split compound in dictionary.

	* data/tdict-std.txt:
	  - Split "ชิงช้าชาลี" into a new entry "ชาลี", as is the case in recent version
	    of Royal Institute dictionary.

2018-08-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* NEWS:
	=== Version 0.1.28 ===

2018-08-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update README.

	* README:
	  - Use HTTPS in project URL.
